@@ -1,4 +1,8 @@
 #!/usr/bin/make -f
 
+# Lucid does not have dh_python2, but we would like to be able to use this
+# rules file to build on lucid as well. Thus the branching logic.
+WITH_PYTHON2 = $(shell test -f /usr/bin/dh_python2 && echo "--with python2")
+
 %:
-	dh --with python2 $@
+	dh $@ ${WITH_PYTHON2}
